--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Languapp</string>
+    <string name="pass">password</string>
+    <string name="name">name</string>
+    <string name="sign">Sign in</string>
+    <string name="forgot">Forgot password?</string>
+    <string name="reg">Do not have an account?</string>
 </resources>
