--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Languapp</string>
     <string name="pass">password</string>
-    <string name="mail">mail</string>
+    <string name="mail">email</string>
     <string name="sign">Sign in</string>
     <string name="forgot">Forgot password?</string>
     <string name="reg">Do not have an account?</string>
